<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#002337"
    android:layout_margin="12sp">

    <ImageView
        android:id="@+id/movieImage"
        android:layout_width="129dp"
        android:layout_height="197dp"
        android:layout_margin="12sp"
        android:contentDescription="@string/movieimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="178sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/movieImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="84dp"
        android:text="@string/year"
        android:textColor="#ABABAB"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movieImage" />

    <TextView
        android:id="@+id/textDirectedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/directed_by"
        android:textColor="#ABABAB"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/movieImage"
        app:layout_constraintTop_toBottomOf="@+id/textYear" />

    <TextView
        android:id="@+id/textDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/director"
        android:textColor="#ABABAB"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textDirectedBy"
        app:layout_constraintTop_toBottomOf="@+id/textYear" />

</androidx.constraintlayout.widget.ConstraintLayout>